# advent-of-code-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aocfetch.py
aoclib/: aocio.hpp  grid.hpp  hash.hpp  lru-cache.hpp  matrix.hpp  parallel.hpp  prio-queue.hpp  vec.hpp
day-01/: day-01.cpp
day-02/: day-02.cpp
day-03/: day-03.cpp
day-04/: day-04.cpp
day-05/: day-05.cpp
day-06/: day-06.cpp
day-07/: day-07.cpp
day-08/: day-08.cpp
day-09/: day-09.cpp
day-10/: day-10.cpp
day-11/: day-11.cpp
day-12/: day-12.cpp
day-13/: day-13.cpp  matrix.hpp
day-14/: day-14.cpp
day-15/: day-15.cpp
day-16/: day-16.cpp
day-17/: day-17.cpp
day-xy/: day-xy.cpp
input/: day-13-example.txt  day-17-example.txt
